create stub before the method which triggers this stub is called